--- a/TIA_Actividad1.ipynb
+++ b/TIA_Actividad1.ipynb
@@ -6,7 +6,7 @@
       "name": "TIA-Actividad1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOhswB60SSYXEmAHYLqbcy",
+      "authorship_tag": "ABX9TyOc9Ed5CzzyKevuvtPHMSvM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -653,35 +653,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kj-bANo1sGFm",
-        "outputId": "442ba6dc-9323-416d-c9ca-f94aebd906a2"
+        "outputId": "fe1ac346-8882-4d08-bc7f-3deaeacf460f"
       },
       "source": [
         "print(\"Accuracy\", accuracy_score(Y_validation, predictions))\n",
         "print(\"Matriz de confusion:\\n\",confusion_matrix(Y_validation, predictions))\n",
-        "print(\"Métricas:\\n\",classification_report(Y_validation, predictions))"
+        "print(\"Métricas:\\n\",classification_report(Y_validation, predictions,zero_division=0.0))"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy 0.98\n",
+            "Accuracy 0.8685714285714285\n",
             "Matriz de confusion:\n",
-            " [[ 73   3   1   0]\n",
-            " [  0  18   0   0]\n",
-            " [  2   1 242   0]\n",
-            " [  0   0   0  10]]\n",
+            " [[ 66   0  11   0]\n",
+            " [ 18   0   0   0]\n",
+            " [  7   0 238   0]\n",
+            " [ 10   0   0   0]]\n",
             "Métricas:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         acc       0.97      0.95      0.96        77\n",
-            "        good       0.82      1.00      0.90        18\n",
-            "       unacc       1.00      0.99      0.99       245\n",
-            "       vgood       1.00      1.00      1.00        10\n",
+            "         acc       0.65      0.86      0.74        77\n",
+            "        good       0.00      0.00      0.00        18\n",
+            "       unacc       0.96      0.97      0.96       245\n",
+            "       vgood       0.00      0.00      0.00        10\n",
             "\n",
-            "    accuracy                           0.98       350\n",
-            "   macro avg       0.95      0.98      0.96       350\n",
-            "weighted avg       0.98      0.98      0.98       350\n",
+            "    accuracy                           0.87       350\n",
+            "   macro avg       0.40      0.46      0.43       350\n",
+            "weighted avg       0.81      0.87      0.84       350\n",
             "\n"
           ],
           "name": "stdout"
@@ -710,14 +710,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XGe5jaR4NWoE",
-        "outputId": "39dd5578-f03a-4abb-a6ad-c975267796c9"
+        "outputId": "5c520d60-db8d-4e82-ccf4-0de2297d1be0"
       },
       "source": [
         "print(\"Accuracy\", accuracy_score(Y_validation, predictions2))\n",
         "print(\"Matriz de confusion:\\n\",confusion_matrix(Y_validation, predictions2))\n",
-        "print(\"Métricas:\\n\",classification_report(Y_validation, predictions2))"
+        "print(\"Métricas:\\n\",classification_report(Y_validation, predictions2, zero_division=0.0))"
       ],
-      "execution_count": 53,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,14 +742,6 @@
             "\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
